--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 click==7.1.2
+cloudinary==1.21.1
 dnspython==1.16.0
 Flask==1.1.2
 Flask-PyMongo==2.3.0
@@ -6,4 +7,3 @@ itsdangerous==1.1.0
 passlib==1.7.2
 pymongo==3.10.1
 Werkzeug==1.0.1
-passlib==1.7.2
